[tool.poetry]
name = "sensorserver_massage"
version = "0.1.0"
description = "Foo!"
authors = ["Joni Kähärä <joni.kahara@async.fi>"]
homepage = "https://github.com/kahara/python-sensorserver-massage/"
repository = "https://github.com/kahara/python-sensorserver-massage/"
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
massage = "sensorserver_massage.console:sensorserver_massage_cli"


[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=sensorserver_massage --cov-fail-under=65 --cov-branch"
asyncio_mode="strict"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-parents = 10

[tool.pylint.messages_control]
disable=["fixme", "W1202", "C0209"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.poetry.dependencies]
python = "^3.10"
datastreamcorelib = "^1.6.0"
click = "^8.0"
python-dateutil = "^2.8.2"
types-python-dateutil = "^2.8.19.14"
polars = {version = "^0.19.7"}
scipy = {version = "^1.11.2", python="^3.10,<3.13"}
pooch = {version = "^1.7.0", extras = ["xxhash"]}
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
coverage = "^6.3"
pytest-cov = "^3.0"
pylint = "^2.13"
black = "^22.3"
bandit = "^1.7"
mypy = "^1.5.1"
pre-commit = "^2.17"
pytest-asyncio = "^0.18"
bump2version = "^1.0"
detect-secrets = "^1.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
